--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 webfonts/ filter=lfs diff=lfs merge=lfs -text
+images filter=lfs diff=lfs merge=lfs -text
